--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,13 @@ header {
     background-color: #fff;
     display: block;
     float: left;
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
     border-bottom: 1px solid #254159;
 }
 
 .logo {
-    width: 300px;
+    width: 29rem;
 }
 
 h1 {
@@ -75,14 +75,15 @@ ol li {
     display: block;
     width: 100vw;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .container {
     display: block;
     float: left;
-    padding: 20px;
-    width: 100%;
-    margin: 0 auto;
+    padding: 20px 0;
+    width: 98%;
+    margin: 0 1%;
 }
 
 img {
@@ -98,7 +99,7 @@ section {
     width: 100%;
     float: left;
     font-size: 1.5rem;
-    padding: 20px;
+    padding-left: 20px;
 }
 
 section nav {
@@ -138,7 +139,7 @@ footer {
     display: block;
     float: left;
     width: 100%;
-    padding: 20px;
+    padding-left: 20px;
 }
 
 footer p {
@@ -164,10 +165,104 @@ footer small {
     width: 100%;
 }
 
+#banner {
+    background-image: url('../imagens/banner.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100vw;
+    height: 60vh;
+}
+
+.legenda {
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 5rem;
+}
+
+.legenda h5,
+.legenda h4 {
+    color: #254259;
+    line-height: 150%;
+}
+
+.legenda-container {
+    float: right;
+    width: 30vw;
+    margin: 10vh 10vh 0 0;
+}
+
+.button-cta {
+    display: inline;
+    background-color: orangered;
+    text-decoration: none;
+    color: #ffffff;
+    box-shadow: 1px 1px 4px #454545;
+    padding: 10px 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    float: right;
+}
+
+.button-cta:hover {
+    background-color: rgb(255, 103, 47);
+}
+
+#saiba-mais p,
+#saiba-mais img {
+    width: 48%;
+    display: block;
+    float: left;
+    padding: 20px;
+}
+
+
+#saiba-mais {
+    background-color: #d3d3d3;
+    padding: 40px;
+}
+
+dl {
+    margin-left: 30px;
+}
+
+dt {
+    font-weight: 600;
+    line-height: 2;
+}
+
+dd {
+    margin-left: 30px;
+    margin-bottom: 20px;
+}
+
+.faq {
+    float: left;
+    margin: 20px;
+}
+
+@media (max-width: 740px) {
+    .legenda-container {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    #saiba-mais p,
+    #saiba-mais img {
+        width: 100%;
+    }
+}
+
+
 @media(max-width: 425px) {
 
     section nav,
-    section article {
+    section article,
+    .logo {
         width: 100%;
     }
 }
