--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    display: block;
     background-color: #f5f5f5;
     font-family: 'Open Sans', sans-serif;
 }
@@ -16,9 +17,9 @@ body {
 header {
     background-color: #fff;
     display: block;
+    width: 100%;
     float: left;
     padding: 20px 0;
-    width: 100%;
     border-bottom: 1px solid #254159;
 }
 
@@ -73,17 +74,16 @@ ol li {
 
 .main-container {
     display: block;
-    width: 100vw;
+    width: 100%;
     margin: 0 auto;
-    overflow: hidden;
 }
 
 .container {
     display: block;
     float: left;
     padding: 20px 0;
-    width: 98%;
-    margin: 0 1%;
+    width: 100%;
+    margin: 0 auto;
 }
 
 img {
@@ -100,6 +100,7 @@ section {
     float: left;
     font-size: 1.5rem;
     padding-left: 20px;
+    overflow: hidden;
 }
 
 section nav {
@@ -131,6 +132,7 @@ section article {
     display: block;
     float: left;
     width: 70%;
+    overflow: hidden;
 }
 
 footer {
@@ -140,6 +142,7 @@ footer {
     float: left;
     width: 100%;
     padding-left: 20px;
+    overflow: hidden;
 }
 
 footer p {
@@ -263,7 +266,7 @@ dd {
     section nav,
     section article,
     .logo {
-        width: 100%;
+        width: 26rem;
     }
 }
 
