--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ footer small {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 60vh;
 }
 
